# dp-converter

./: .gitignore  CMakeLists.txt  MQAnalyzerConfig.h.in  README.md  Tests.cpp  Tests.h  configure.py  main.cpp  makefile
analyzer/: Analyzer.cpp  Analyzer.h  AnalyzerFactory.cpp  AnalyzerFactory.h  BasicResultProcessor.cpp  BasicResultProcessor.h  CMakeLists.txt  Cases.cpp  Cases.h  Result.h  ResultProcessorInterface.h  Source.cpp  Source.h  SourceLoader.cpp  SourceLoader.h
app/: AppManager.cpp  AppManager.h  CMakeLists.txt  Config.cpp  Config.h
converter/: CMakeLists.txt  Converter.cpp  Converter.h  ConverterFactory.cpp  ConverterFactory.h  ToBaseAlgInterface.h  ToBaseAlgorithm1.cpp  ToBaseAlgorithm1.h  ToExtendedAlgInterface.h  ToExtendedAlgorithm1.cpp  ToExtendedAlgorithm1.h  ToExtendedAlgorithm2.cpp  ToExtendedAlgorithm2.h
docs/: Doxyfile
err/: MQAException.h
io/: CMakeLists.txt  ComparableOutput.cpp  ComparableOutput.h  DefaultFileInput.cpp  DefaultFileInput.h  DefaultFileOutput.cpp  DefaultFileOutput.h  DefaultInput.cpp  DefaultInput.h  DefaultOutput.cpp  DefaultOutput.h  FileInputInterface.h  FileInterface.h  FileOutputInterface.h  InputInterface.h  MQFileInput.cpp  MQFileInput.h  MQFileOutput.cpp  MQFileOutput.h  MQInput.cpp  MQInput.h  MQOutput.cpp  MQOutput.h  MockInput.cpp  MockInput.h  ObservableOutput.cpp  ObservableOutput.h  ObserverInput.cpp  ObserverInput.h  OutputInterface.h  RawOutput.cpp  RawOutput.h  SourceInput.cpp  SourceInput.h  SourceOutput.cpp  SourceOutput.h
log/: Logger.cpp  Logger.h
polylib/: CMakeLists.txt  PolyLib.cpp  PolyLib.h  PrimitivePolyFactory.cpp
tasks/analyze-HFE/: HFE_sk_polynom.txt  config.json  output.txt  task.conf
tasks/analyze-HFE/inputs/1/: HFE_pk_MQ.txt  HFE_sk_polynom.txt
tasks/analyze-HFE/inputs/10/: HFE_pk_MQ.txt  HFE_sk_polynom.txt
tasks/analyze-HFE/inputs/2/: HFE_pk_MQ.txt  HFE_sk_polynom.txt
tasks/analyze-HFE/inputs/3/: HFE_pk_MQ.txt  HFE_sk_polynom.txt
tasks/analyze-HFE/inputs/4/: HFE_pk_MQ.txt  HFE_sk_polynom.txt
tasks/analyze-HFE/inputs/5/: HFE_pk_MQ.txt  HFE_sk_polynom.txt
tasks/analyze-HFE/inputs/6/: HFE_pk_MQ.txt  (+1 more)
tasks/analyze-MIA/: config.json  output.txt  task.conf
tasks/convert-BP-EF/: config.json  input.txt  task.conf
tasks/convert-EF-BP/: config.json  input.txt  output.txt  task.conf
tests/: CMakeLists.txt
ui/: BasicUI.cpp  BasicUI.h  CMakeLists.txt  UIData.cpp  UIData.h  UIInterface.h
(+15 files in other folders)
